usercontroller  新增 传json 返回json ，传字符串  返回json， 执行存储过程，执行sql语句

--- a/WebService/SwaggerAPI.csproj
+++ b/WebService/SwaggerAPI.csproj
@@ -5,6 +5,10 @@
     <UserSecretsId>fbe68df2-dfb0-4520-b8cf-3eed777c0c7a</UserSecretsId>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>E:\VS2022\WebServer\SwaggerAPI\SwaggerAPI\SwaggerAPI.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="IUserinfo.cs" />
   </ItemGroup>
